fix transition vignette des plats + ajout du overflow elipsis, html : page complete, ajout des section plat et dessert + footer

--- a/style/css/body.css
+++ b/style/css/body.css
@@ -1,5 +1,5 @@
-h2 {
-  font-family: "Roboto", cursive ;
+h2, h3 {
+  font-family: "Roboto" ;
 }
 
 p {
